2010-02-15  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion scripts to the path in env

2010-01-28  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Add rpm creation rules to the makefile
	* configure.ac:
	* flumotion-flashmedia.spec.in:
	Sync with changes in flumotion at r8195

2009-06-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	The bug the last commit worked around is now fixed.

2009-06-04  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	RTMPy seems to not report refused publish error to FME,
	so the encoder don't gives feedback and seems to stream
	normally even if the data is discarded by RTMPy.
	Force disconnection when refusing to publish a stream.

2009-06-04  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	Now properly set gstreamer DELTA_UNIT flag for audio buffer.
	This was preventing burst-to-keyframe to work properly.

2009-06-04  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	Fixed to match the API modifications after commiting changes to flvlib.
	Need flvlib 0.1.5.
